# pattern_file_recognizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pattern_file_recognizer/: __init__.py  recognizer.py
tests/: test_recognizer.py
